Changing JSON file into js file to prevent js not working on iPhone

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ a:visited {
   font-size: 20px;
 }
 .longDesc {
+  height: 100%;
   display: none;
   font-family: "Merriweather", serif;
   font-size: 10px;
